--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,6 +27,9 @@ requirements:
     - python >=3.6
     - sphinx >=3.0,<5
     - docutils >=0.12
+    - Jinja2 >=2.7.3
+    - MarkupSafe >=0.23
+    - Pygments >=1.6
 
 test:
   imports:
