--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,10 +22,10 @@ requirements:
     - python >=3.6
     - setuptools
     # Detects sphinx at build time
-    - sphinx >=3.0,<5
+    - sphinx >=4.0,<6.0.0a
   run:
     - python >=3.6
-    - sphinx >=3.0,<5
+    - sphinx >=4.0,<6.0.0a
     - docutils >=0.12
     - Jinja2 >=2.7.3
     - MarkupSafe >=0.23
