--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,7 +25,7 @@ requirements:
     - sphinx >=4.0,<6.0.0a
   run:
     - python >=3.6
-    - sphinx >=4.0,<6.0.0a
+    - sphinx >=4.0,<7
     - docutils >=0.12
     - Jinja2 >=2.7.3
     - MarkupSafe >=0.23
