--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,10 +22,10 @@ requirements:
     - python {{ python_min }}
     - setuptools
     # Detects sphinx at build time
-    - sphinx >=4.0,<7.2
+    - sphinx >=4.0,<9.0.0a0
   run:
     - python >={{ python_min }}
-    - sphinx >=4.0,<7.2
+    - sphinx >=4.0,<9.0.0a0
     - docutils >=0.12
     - Jinja2 >=2.7.3
     - MarkupSafe >=0.23
